removed unused lines

--- a/Ansible.ipynb
+++ b/Ansible.ipynb
@@ -1,21 +1,12 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
+      "execution_count": 12,
+      "metadata": {
+        "id": "1sZMY7KWV-nL"
+      },
+      "outputs": [],
       "source": [
         "import json  # Handles JSON data\n",
         "import re  # Provides regular expression matching\n",
@@ -25,15 +16,15 @@
         "from google.colab import auth  # Google Colab authentication module\n",
         "from markdown import markdown  # Converts Markdown text to HTML\n",
         "import unittest  # Python unit testing framework"
-      ],
-      "metadata": {
-        "id": "1sZMY7KWV-nL"
-      },
-      "execution_count": 12,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {
+        "id": "dFPX1Ws8yzY0"
+      },
+      "outputs": [],
       "source": [
         "def authenticate_google_docs():\n",
         "    \"\"\"Authenticates with Google Docs API and returns a service object.\"\"\"\n",
@@ -53,15 +44,15 @@
         "        print(f'Document updated successfully: https://docs.google.com/document/d/{doc_id}')\n",
         "    except HttpError as e:\n",
         "        print(f'An error occurred: {e}')  # Handle API errors"
-      ],
-      "metadata": {
-        "id": "dFPX1Ws8yzY0"
-      },
-      "execution_count": 13,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "4inMSCc9y3dL"
+      },
+      "outputs": [],
       "source": [
         "def parse_markdown(md_text):\n",
         "    \"\"\"Converts markdown text into Google Docs API requests with proper bullet formatting and indentation.\"\"\"\n",
@@ -71,10 +62,8 @@
         "\n",
         "    for line in lines:\n",
         "        actual_text = line.rstrip()\n",
-        "        skipped_chars = 0\n",
         "        style = None\n",
         "        apply_footer_style = False\n",
-        "        bullet = False\n",
         "\n",
         "        # Handling other markdown elements\n",
         "        if line.startswith(\"# \"):  # Heading 1\n",
@@ -140,15 +129,27 @@
         "        index += actual_text_length  # Move index forward\n",
         "\n",
         "    return requests"
-      ],
-      "metadata": {
-        "id": "4inMSCc9y3dL"
-      },
-      "execution_count": 19,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 20,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mbkJzN5Ly6Ga",
+        "outputId": "c1624afa-7c3a-4228-eba0-fea4de25876d"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Document updated successfully: https://docs.google.com/document/d/1aruN4DkZG4eWW1Lq0neimfRcQdIuXMPEkmF0kBhv5Z4\n"
+          ]
+        }
+      ],
       "source": [
         "# Example markdown notes\n",
         "markdown_notes = \"\"\"# Product Team Sync - May 15, 2023\n",
@@ -214,24 +215,21 @@
         "doc_id = create_google_doc(service, \"Product Team Sync - May 15, 2023\")\n",
         "requests = parse_markdown(markdown_notes)\n",
         "update_google_doc(service, doc_id, requests)\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "mbkJzN5Ly6Ga",
-        "outputId": "c1624afa-7c3a-4228-eba0-fea4de25876d"
-      },
-      "execution_count": 20,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Document updated successfully: https://docs.google.com/document/d/1aruN4DkZG4eWW1Lq0neimfRcQdIuXMPEkmF0kBhv5Z4\n"
-          ]
-        }
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
